--- a/pi-agent/pom.xml
+++ b/pi-agent/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -16,15 +16,17 @@
 	<artifactId>pi-agent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pi-agent</name>
-	<description>pi-agent</description>
 
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 
-	<!-- Dependency Management: force safe versions -->
+
+	<!-- Dependency Management -->
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- Safe Apache Versions -->
 			<dependency>
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
@@ -35,14 +37,22 @@
 				<artifactId>commons-collections4</artifactId>
 				<version>4.4</version>
 			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
+
 	<dependencies>
-		<!-- Spring Boot Starter -->
+
+		<!-- Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<!-- Lombok -->
@@ -52,34 +62,32 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- AWS IoT SDK () -->
+		<!-- AWS IoT Device SDK -->
 		<dependency>
 			<groupId>software.amazon.awssdk.iotdevicesdk</groupId>
 			<artifactId>aws-iot-device-sdk</artifactId>
-			<version>1.28.0</version> <!-- or pick latest version from GitHub/Maven Central -->
+			<version>1.28.0</version>
 		</dependency>
 
 
-		<!-- Safe Apache Commons (explicit override) -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-collections4</artifactId>
-			<version>4.4</version>
-		</dependency>
+		<!-- ============ DIOZERO (Works on Pi 5 + Docker) ============ -->
 
+		<!-- ========================================================= -->
+
+		<!-- Spring Boot Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
+
+			<!-- Java Compiler -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -93,6 +101,7 @@
 				</configuration>
 			</plugin>
 
+			<!-- Spring Boot Packaging -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -105,10 +114,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
 </project>
+
+
 
 
 
